# Algo-of-C

./: .gitignore  README.md  temp.c
ACM/: Quick_Sort.c
SGMS/: CMakeLists.txt  README.md  build & run.bat  get_data.c  list.h  list_api.c  main.c  run.bat  sgms.csv  sgms.txt  stu_cmp.c  stu_file.c  stu_func.h  stu_seek.c  temp.c
SGMS/include/: stu_func.h  stu_item.h
SGMS/module/: CMakeLists.txt
SGMS/module/List/: CMakeLists.txt  list.h  list_api.c
SGMS/source/: CMakeLists.txt  main.c  stu_cmp.c  stu_file.c  stu_get_data.c  stu_seek.c
TelBook/: list.h  main.c  tel_cmp.c  tel_file.c  tel_func.h  tel_get_data.c  tel_item.h  tel_seek.c  telbook.csv
