SET(SRC_LIST main.c stu_cmp.c stu_file.c stu_get_data.c stu_seek.c)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/module/list)
ADD_EXECUTABLE(main ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/build/lib)
TARGET_LINK_LIBRARIES(main list)